# ClaimStab-QC

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  ICSE_FOCUS_PLAN.md  INFRASTRUCTURE_MINIMUM_PLAN.md  Makefile  PAPER_SCOPE.md  POST_CHANGE_AUDIT.md  README.md  RELEASE_PLAN.md  RESEARCH_FOCUS_PLAN.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: dataset_submission.md
.github/workflows/: ci.yml  docs.yml
artifacts/day1_smoke/: day1_rankflip.json  day1_scores.csv
artifacts/day1_smoke2/: day1_rankflip.json  day1_scores.csv  stability_report.html
atlas/: README.md  index.json
claimstab/: __init__.py  cli.py  utils.py
claimstab/analysis/: __init__.py  paper_claims.py  rq.py  sanity.py  synthetic_truth.py
claimstab/atlas/: __init__.py  catalog.py  compare.py  registry.py
claimstab/baselines/: __init__.py  naive.py
claimstab/cache/: __init__.py  store.py
claimstab/claims/: __init__.py  decision.py  diagnostics.py  distribution.py  evaluation.py  ranking.py  stability.py
claimstab/commands/: __init__.py  _utils.py  atlas.py  init_external_task.py  misc.py  report.py  run.py  validate.py
claimstab/core/: __init__.py  events.py  trace.py
claimstab/devices/: __init__.py  backend_snapshot.py  ibm_fake.py  iqm_fake.py  registry.py  spec.py
claimstab/ecosystem/: __init__.py  validate.py
claimstab/evidence/: __init__.py  protocol.py  schema_cep_v1.json
claimstab/figures/: __init__.py  adaptive.py  attribution.py  baseline_compare.py  ci_shrink.py  cost_curve.py  heatmap.py  icse_eval.py  loaders.py  plot_multidevice_heatmap.py  plot_rq4_adaptive.py  robustness.py  style.py
claimstab/inference/: __init__.py  policies.py
claimstab/io/: runtime_meta.py  writers.py
claimstab/methods/: spec.py
claimstab/perturbations/: __init__.py  operators.py  sampling.py  space.py
claimstab/pipelines/: __init__.py  aggregate.py  claim_stability_app.py  common.py  emit.py  evaluate.py  main_aggregate_emit.py  planning.py  (+6 more)
docs/: ARCHITECTURE.md  EXPERIMENT_PLAYBOOK.md  artifact.md  atlas.md  cite.md  commit_windows.md  compatibility_contract.md  custom_task_quickstart.md  dataset_registry.md  design_your_own_case.md  ecosystem.md  evidence_map.md  examples.md  experiment_matrix.md  explorer.md  for_icse.md  icse_experiment_matrix.md  index.md  output_map.md  playground.md  quickstart.md  release_checklist.md  release_notes_template.md  repo_layout.md  reproduce.md  reproduction_contract.md  trace_cache_replay.md
ecosystem/: README.md
examples/: atlas_bv_workflow.py  claim_stability_demo.py  exp_boundary_challenge.py  exp_comprehensive_calibration.py  exp_comprehensive_large.py  exp_icse_methodset.py  exp_rq4_adaptive.py  exp_structural_compilation.py  grover_distribution_demo.py  multidevice_demo.py
out_batch_day2/: day2_rankflip.json  stability_report.html
out_day2_large_batch/: stability_report.html
out_day2_large_batch_v2/: day2_large_scores.csv  stability_report.html
out_fix_check/: day1_rankflip.json  day1_scores.csv  stability_report.html
out_icse_check/: day2_rankflip.json  day2_scores.csv  stability_report.html
out_real/: day1_rankflip.json  day1_scores.csv
out_real_day2/: day2_rankflip.json  day2_scores.csv  stability_report_compat.html  stability_report_day2.html
output/: claim_stability.json  scores.csv  stability_report.html
paper/: PAPER_SCOPE.md  README.md
specs/: atlas_bv_demo.yml  paper_boundary.yml  paper_main.yml
(+340 files in other folders)
