[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claimstab-qc"
version = "0.1.0"
description = "Claim-centric stability harness for quantum software experiments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "ClaimStab-QC Contributors" }
]
dependencies = [
  "qiskit>=1.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4"
]
aer = [
  "qiskit-aer>=0.13"
]
ibm = [
  "qiskit-ibm-runtime>=0.30"
]

[tool.setuptools.packages.find]
include = ["claimstab*"]
